# text-formatter

./: CMakeLists.txt  README.md  benchmark.cpp  formatter.cpp  formatter.hpp  main.cpp  test_formatter.cpp  utils.hpp
